--- a/src/components/Page2/styles.css
+++ b/src/components/Page2/styles.css
@@ -1,103 +1,5 @@
-* {
-    box-sizing: border-box;
-}
-
-html,
-body,
-#root {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    background-color: #272727;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    overflow: hidden;
-}
-
-body {
-    position: fixed;
-    overflow: hidden;
-    overscroll-behavior-y: none;
-    font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, ubuntu, roboto, noto, segoe ui, arial,
-    sans-serif;
-    color: black;
-}
-
 .main {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    color: white;
-    overflow: hidden;
-}
-
-span.header {
-    font-family: 'Playfair Display', serif;
-    position: absolute;
-    display: inline-block;
-    width: 500px;
-    top: 50%;
-    transform: translate3d(0, -50%, 0);
-    left: 2em;
-    font-size: 6.5em;
-    line-height: 1em;
-}
-
-@media only screen and (max-width: 800px) {
-    span.header {
-        top: 200px;
-        left: 40px;
-        font-size: 4em;
-        width: 200px;
-    }
-}
-
-@media only screen and (max-width: 500px) {
-    a.bottom-left {
-        display: none;
-    }
-}
-
-a {
-    color: white;
-    font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, ubuntu, roboto, noto, segoe ui, arial,
-    sans-serif;
-    position: absolute;
-    font-size: 1.1em;
-    display: inline;
-    text-decoration: none;
-}
-
-a.top-left {
-    top: 40px;
-    left: 40px;
-}
-
-a.top-right {
-    top: 40px;
-    right: 40px;
-}
-
-a.bottom-left {
-    bottom: 40px;
-    left: 40px;
-}
-
-a.bottom-right {
-    bottom: 40px;
-    right: 40px;
-}
-
-canvas {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    pointer-events: none;
+    height: 600px;
+    background-color: #272727;
     overflow: hidden;
 }
