modify landing page

--- a/src/components/Home/less/banner0.less
+++ b/src/components/Home/less/banner0.less
@@ -6,7 +6,7 @@
   position: relative;
   text-align: center;
   border-color: #666;
-  background-image: url("https://zos.alipayobjects.com/rmsportal/gGlUMYGEIvjDOOw.jpg");
+  background-image: url("../../../assets/banner.jpg");
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
