--- a/src/components/Home/less/nav0.less
+++ b/src/components/Home/less/nav0.less
@@ -14,7 +14,11 @@
     display: inline-block;
     position: relative;
     width: 150px;
-    line-height: 64px;
+    color: #fff8de;
+    font-weight: 700;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 5vh;
+    line-height: 1.2em;
     & img {
       vertical-align: middle;
       display: inline-block;
