--- a/src/components/Session/index.css
+++ b/src/components/Session/index.css
@@ -3,13 +3,25 @@
 .login-form {
     max-width: 300px;
     width: 50%;
-    height: 50%;
+
     overflow: auto;
     margin: auto;
     position:absolute;
     top: 0;
     left: 0;
     bottom: 0;
+    right: 0;
+}
+.register-form {
+    max-width: 300px;
+    width: 50%;
+    height: 10%;
+    overflow: auto;
+    margin: auto;
+    position:absolute;
+    top: 0;
+    left: 0;
+    bottom: -100px;
     right: 0;
 }
 
