修复手机端图书显示问题

--- a/src/components/Page2/index.scss
+++ b/src/components/Page2/index.scss
@@ -6,7 +6,9 @@
   margin-bottom: 50px;
   align-content: flex-start;
 }
-
+.book-index-lower-div1 {
+  margin-left: 100px;
+}
 .front-image {
   height: 100%;
 
