更改封面图片地址 修正手机端页面拖动问题 修正删除问题 增加更新功能

--- a/src/components/Page2/index.scss
+++ b/src/components/Page2/index.scss
@@ -22,7 +22,9 @@
   width: 200px !important;
   margin-right: 10px !important;
 }
+.book-index-div1 {
 
+}
 .book-index-div {
   width: 70%;
   min-width: 600px;
