改换为蚂蚁的drawe之前

--- a/src/components/Reader/Control/Toolbar.css
+++ b/src/components/Reader/Control/Toolbar.css
@@ -1,7 +1,7 @@
 .toolbar {
-  position: fixed;
+  /*position: fixed;
   right: 0px;
-  bottom: 0px;
+  bottom: 0px;*/
   width: 300px;
   height: 40px;
   padding: 0 10px;
